# luna-os

./: .gitignore  CLAUDE.md  PLANNER_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/luna_os/: __init__.py  check_waiting_todos.py  cli.py  dashboard.py  events.py  events.py.backup  planner.py  planner.py.bak  session_overview.py  streaming_bridge.py  task_manager.py  timeline.py  timeline.py.backup  timeline.py.backup2  timeline.py.before-restore  timeline.py.checkpoint-spacing-25  timeline_patch.js  types.py
src/luna_os/agents/: __init__.py  base.py  openclaw.py
src/luna_os/interceptor/: __init__.py  cli.py  commands.json  commands.py  embedding.py  handlers.py  matcher.py  proxy.py  registry.py  types.py
src/luna_os/notifications/: __init__.py  base.py  lark.py
src/luna_os/store/: __init__.py  base.py  postgres.py
src/luna_os/watchdog/: __init__.py  alerter.py  models.py  runner.py
src/luna_os/watchdog/checks/: __init__.py  dead_agents.py  stale_tasks.py  stuck_plans.py
tests/: memory_store.py  test_confirm_card.py  test_embedding.py  test_events.py  test_interceptor.py  test_openclaw_runner.py  test_planner.py  test_planner_integration.py  test_spawn_rollback.py  test_store_interface.py  test_task_lifecycle.py  test_version.py
