[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luna-os"
version = "0.1.0"
description = "Task orchestration & planner framework for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Carl Li" }]
dependencies = [
    "asyncpg>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
