[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luna-os"
version = "0.1.0"
description = "Task orchestration & planner framework for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Carl Li" }]
dependencies = [
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
lark = [
    "lark-toolkit>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
luna-os = "luna_os.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
